--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1510,3 +1510,708 @@ a {
   padding-bottom: 5rem;
   background-color: #ffffff;
 }
+.cid-sfZmlCwEHM {
+  padding-top: 6rem;
+  padding-bottom: 0rem;
+  background-image: url("../../../assets/images/background4.jpg");
+}
+.cid-sfZmlCwEHM .mbr-text,
+.cid-sfZmlCwEHM .mbr-section-btn {
+  color: #232323;
+  text-align: left;
+}
+.cid-sfZmlCwEHM .card-title,
+.cid-sfZmlCwEHM .card-box {
+  color: #ffffff;
+}
+.cid-sfZmlCwEHM .mbr-text,
+.cid-sfZmlCwEHM .link-wrap {
+  color: #ffffff;
+}
+.cid-sfZn0PYUex {
+  padding-top: 1rem;
+  padding-bottom: 6rem;
+  background-image: url("../../../assets/images/background3.jpg");
+}
+.cid-sfZn0PYUex .mbr-overlay {
+  background: #fafafa;
+  opacity: 0.6;
+}
+.cid-sfZn0PYUex img,
+.cid-sfZn0PYUex .item-img {
+  height: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+.cid-sfZn0PYUex .item:focus,
+.cid-sfZn0PYUex span:focus {
+  outline: none;
+}
+.cid-sfZn0PYUex .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-sfZn0PYUex .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #ffffff;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-sfZn0PYUex .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-sfZn0PYUex .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-sfZn0PYUex .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-sfZn0PYUex .mbr-section-title {
+  color: #232323;
+}
+.cid-sfZn0PYUex .mbr-text,
+.cid-sfZn0PYUex .mbr-section-btn {
+  text-align: left;
+}
+.cid-sfZn0PYUex .item-title {
+  text-align: left;
+}
+.cid-sfZn0PYUex .item-subtitle {
+  text-align: left;
+  color: #bbbbbb;
+}
+.cid-sfZp0MOolI {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+.cid-sfZp0MOolI ul {
+  list-style: none;
+  margin: 0;
+  padding-left: 1.6rem;
+}
+.cid-sfZp0MOolI li {
+  position: relative;
+  margin-bottom: 1rem;
+}
+.cid-sfZp0MOolI ul li::before {
+  position: absolute;
+  left: -1.6rem;
+  content: "\2022";
+  color: #6592e6;
+  font-weight: bold;
+  font-size: 2rem;
+  width: 1.6rem;
+}
+.cid-sfZw5JIesr {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-image: url("../../../assets/images/background4.jpg");
+}
+.cid-sfZw5JIesr .mbr-text,
+.cid-sfZw5JIesr .mbr-section-btn {
+  color: #232323;
+  text-align: left;
+}
+.cid-sfZw5JIesr .card-title,
+.cid-sfZw5JIesr .card-box {
+  color: #ffffff;
+}
+.cid-sfZw5JIesr .mbr-text,
+.cid-sfZw5JIesr .link-wrap {
+  color: #ffffff;
+}
+.cid-sfZwEHuTCe {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+@media (max-width: 991px) {
+  .cid-sfZwEHuTCe .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sfZwEHuTCe img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-sfZwEHuTCe .text-wrapper {
+    padding: 2rem;
+  }
+}
+.cid-sfZyufgnbr {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+.cid-sfZyufgnbr ul {
+  list-style: none;
+  margin: 0;
+  padding-left: 1.6rem;
+}
+.cid-sfZyufgnbr li {
+  position: relative;
+  margin-bottom: 1rem;
+}
+.cid-sfZyufgnbr ul li::before {
+  position: absolute;
+  left: -1.6rem;
+  content: "\2022";
+  color: #6592e6;
+  font-weight: bold;
+  font-size: 2rem;
+  width: 1.6rem;
+}
+.cid-sfZzt4xH9H {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-sfZzt4xH9H .nav-tabs .nav-item.open .nav-link:focus,
+.cid-sfZzt4xH9H .nav-tabs .nav-link.active:focus {
+  outline: none;
+}
+.cid-sfZzt4xH9H .nav-tabs {
+  flex-wrap: wrap;
+  border-bottom: 1px solid #6592e6;
+}
+@media (max-width: 767px) {
+  .cid-sfZzt4xH9H .nav-item {
+    width: 100%;
+    margin: 0;
+  }
+}
+.cid-sfZzt4xH9H .nav-tabs .nav-link {
+  transition: all .5s;
+  border: none;
+  border-bottom: 3px solid transparent;
+}
+.cid-sfZzt4xH9H .nav-tabs .nav-link:not(.active) {
+  color: #000000;
+}
+.cid-sfZzt4xH9H .nav-tabs .nav-item {
+  margin-right: 1.5rem;
+}
+.cid-sfZzt4xH9H .nav-link,
+.cid-sfZzt4xH9H .nav-link.active {
+  padding: 1rem 0;
+  background-color: transparent;
+}
+.cid-sfZzt4xH9H .nav-tabs .nav-link.active {
+  color: #6592e6;
+  border-bottom: 3px solid #6592e6;
+}
+.cid-sfZzt4xH9H H4 {
+  text-align: center;
+}
+.cid-sfZzt4xH9H H3 {
+  text-align: center;
+}
+.cid-sfZIYvQdT0 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+.cid-sfZIYvQdT0 ul {
+  list-style: none;
+  margin: 0;
+  padding-left: 1.6rem;
+}
+.cid-sfZIYvQdT0 li {
+  position: relative;
+  margin-bottom: 1rem;
+}
+.cid-sfZIYvQdT0 ul li::before {
+  position: absolute;
+  left: -1.6rem;
+  content: "\2022";
+  color: #6592e6;
+  font-weight: bold;
+  font-size: 2rem;
+  width: 1.6rem;
+}
+.cid-sfZN5swh6A {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-sfZN5swh6A .mbr-iconfont {
+  font-size: 1.4rem !important;
+  font-family: 'Moririse2' !important;
+  color: #6592e6;
+  margin-left: 1rem;
+}
+.cid-sfZN5swh6A .panel-group {
+  border: none;
+}
+.cid-sfZN5swh6A .panel-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.cid-sfZN5swh6A .panel-body,
+.cid-sfZN5swh6A .card-header {
+  padding: 1rem 0;
+}
+.cid-sfZN5swh6A .panel-title-edit {
+  color: #000000;
+}
+.cid-sfZN5swh6A .card .card-header {
+  background-color: transparent;
+  margin-bottom: 0;
+}
+.cid-sfZSoL9XH8 {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #fafafa;
+}
+.cid-sfZSoL9XH8 .carousel {
+  height: 800px;
+}
+.cid-sfZSoL9XH8 .carousel img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.cid-sfZSoL9XH8 .carousel-item,
+.cid-sfZSoL9XH8 .carousel-inner {
+  height: 100%;
+}
+.cid-sfZSoL9XH8 .mbr-overlay {
+  z-index: 1;
+}
+.cid-sfZSoL9XH8 .carousel-caption {
+  bottom: 40px;
+}
+.cid-sfZSoL9XH8 .mobi-mbri-arrow-next {
+  margin-left: 5px;
+}
+.cid-sfZSoL9XH8 .mobi-mbri-arrow-prev {
+  margin-right: 5px;
+}
+.cid-sfZSoL9XH8 .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+.cid-sfZSoL9XH8 .item-wrapper {
+  width: 100%;
+}
+@media (max-width: 767px) {
+  .cid-sfZSoL9XH8 .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-sfZSoL9XH8 .content-slider-wrap {
+    width: 100% !important;
+  }
+}
+.cid-sfZSoL9XH8 .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-sfZSoL9XH8 .carousel-control {
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.cid-sfZSoL9XH8 .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-sfZSoL9XH8 .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-sfZSoL9XH8 .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-sfZSoL9XH8 .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-sfZSoL9XH8 .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-sfZSoL9XH8 .carousel-indicators li.active,
+.cid-sfZSoL9XH8 .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-sfZSoL9XH8 .carousel-indicators li::after,
+.cid-sfZSoL9XH8 .carousel-indicators li::before {
+  content: none;
+}
+.cid-sfZSoL9XH8 .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .cid-sfZSoL9XH8 .carousel-indicators {
+    display: none !important;
+  }
+}
+.cid-sfZSoL9XH8 P {
+  text-align: left;
+}
+.cid-sfZTGlw1oP {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #fafafa;
+}
+.cid-sfZTGlw1oP .carousel {
+  height: 800px;
+}
+.cid-sfZTGlw1oP .carousel img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.cid-sfZTGlw1oP .carousel-item,
+.cid-sfZTGlw1oP .carousel-inner {
+  height: 100%;
+}
+.cid-sfZTGlw1oP .mbr-overlay {
+  z-index: 1;
+}
+.cid-sfZTGlw1oP .carousel-caption {
+  bottom: 40px;
+}
+.cid-sfZTGlw1oP .mobi-mbri-arrow-next {
+  margin-left: 5px;
+}
+.cid-sfZTGlw1oP .mobi-mbri-arrow-prev {
+  margin-right: 5px;
+}
+.cid-sfZTGlw1oP .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+.cid-sfZTGlw1oP .item-wrapper {
+  width: 100%;
+}
+@media (max-width: 767px) {
+  .cid-sfZTGlw1oP .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-sfZTGlw1oP .content-slider-wrap {
+    width: 100% !important;
+  }
+}
+.cid-sfZTGlw1oP .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-sfZTGlw1oP .carousel-control {
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.cid-sfZTGlw1oP .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-sfZTGlw1oP .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-sfZTGlw1oP .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-sfZTGlw1oP .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-sfZTGlw1oP .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-sfZTGlw1oP .carousel-indicators li.active,
+.cid-sfZTGlw1oP .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-sfZTGlw1oP .carousel-indicators li::after,
+.cid-sfZTGlw1oP .carousel-indicators li::before {
+  content: none;
+}
+.cid-sfZTGlw1oP .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .cid-sfZTGlw1oP .carousel-indicators {
+    display: none !important;
+  }
+}
+.cid-sfZTGlw1oP P {
+  text-align: left;
+}
+.cid-sfZVGV7iJP {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #fafafa;
+}
+.cid-sfZVGV7iJP .carousel {
+  height: 800px;
+}
+.cid-sfZVGV7iJP .carousel img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.cid-sfZVGV7iJP .carousel-item,
+.cid-sfZVGV7iJP .carousel-inner {
+  height: 100%;
+}
+.cid-sfZVGV7iJP .mbr-overlay {
+  z-index: 1;
+}
+.cid-sfZVGV7iJP .carousel-caption {
+  bottom: 40px;
+}
+.cid-sfZVGV7iJP .mobi-mbri-arrow-next {
+  margin-left: 5px;
+}
+.cid-sfZVGV7iJP .mobi-mbri-arrow-prev {
+  margin-right: 5px;
+}
+.cid-sfZVGV7iJP .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+.cid-sfZVGV7iJP .item-wrapper {
+  width: 100%;
+}
+@media (max-width: 767px) {
+  .cid-sfZVGV7iJP .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-sfZVGV7iJP .content-slider-wrap {
+    width: 100% !important;
+  }
+}
+.cid-sfZVGV7iJP .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-sfZVGV7iJP .carousel-control {
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.cid-sfZVGV7iJP .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-sfZVGV7iJP .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-sfZVGV7iJP .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-sfZVGV7iJP .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-sfZVGV7iJP .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-sfZVGV7iJP .carousel-indicators li.active,
+.cid-sfZVGV7iJP .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-sfZVGV7iJP .carousel-indicators li::after,
+.cid-sfZVGV7iJP .carousel-indicators li::before {
+  content: none;
+}
+.cid-sfZVGV7iJP .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .cid-sfZVGV7iJP .carousel-indicators {
+    display: none !important;
+  }
+}
+.cid-sfZVGV7iJP P {
+  text-align: left;
+}
+.cid-sfZYYu0H2E {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+.cid-sfZYYu0H2E .timelines-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column-reverse;
+}
+.cid-sfZYYu0H2E .timeline-element {
+  position: relative;
+}
+.cid-sfZYYu0H2E .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-sfZYYu0H2E .iconBackground {
+  position: absolute;
+  left: 33.33%;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid #6592e6;
+  top: 30px;
+  margin-left: -9px;
+}
+.cid-sfZYYu0H2E .separline:before {
+  top: 50px;
+  bottom: 0;
+  position: absolute;
+  content: "";
+  width: 2px;
+  background-color: #6592e6;
+  left: 33.33%;
+  height: calc(100% + 30px);
+}
+@media (max-width: 767px) {
+  .cid-sfZYYu0H2E .iconBackground {
+    left: 15px !important;
+  }
+  .cid-sfZYYu0H2E .separline:before {
+    left: 15px !important;
+  }
+}
+.cid-sfZYYu0H2E .mbr-section-title,
+.cid-sfZYYu0H2E .mbr-section-subtitle {
+  text-align: center;
+}
+@media (max-width: 767px) {
+  .cid-sfZYYu0H2E .time-line-date-content {
+    margin-left: 1rem;
+  }
+  .cid-sfZYYu0H2E .time-line-date-content .mbr-timeline-date {
+    text-align: center;
+  }
+}
+@media (min-width: 768px) {
+  .cid-sfZYYu0H2E .time-line-date-content {
+    margin-right: 1rem;
+  }
+  .cid-sfZYYu0H2E .time-line-date-content .mbr-timeline-date {
+    text-align: right;
+  }
+}
+.cid-sfZYYu0H2E .timeline-text-content {
+  margin-left: 2rem;
+}
+.cid-sfZYYu0H2E .reverseTimeline {
+  display: flex;
+  flex-direction: column-reverse;
+}
+.cid-sfZYYu0H2E .mbr-timeline-date {
+  text-align: right;
+}
+.cid-sfZYYu0H2E .mbr-section-subtitle DIV {
+  text-align: right;
+}
+.cid-sfZYYu0H2E .mbr-section-subtitle {
+  text-align: right;
+}
+.cid-sfZYYu0H2E .mbr-timeline-text {
+  text-align: center;
+}
+.cid-sg03FZsnRe {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+@media (max-width: 991px) {
+  .cid-sg03FZsnRe .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sg03FZsnRe .row {
+  flex-direction: row-reverse;
+}
+.cid-sg03FZsnRe img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-sg03FZsnRe .text-wrapper {
+    padding: 2rem;
+  }
+}
+.cid-sg09PggL5S {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #232323;
+}
