Simple changes until "Ciência no Período Medieval"

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1536,7 +1536,7 @@ a {
 .cid-sfZn0PYUex {
   padding-top: 1rem;
   padding-bottom: 6rem;
-  background-image: url("../../../assets/images/background3.jpg");
+  background-image: url("../../../assets/images/background1-2.jpeg");
 }
 .cid-sfZn0PYUex .mbr-overlay {
   background: #fafafa;
@@ -1594,6 +1594,7 @@ a {
 .cid-sfZp0MOolI {
   padding-top: 5rem;
   padding-bottom: 5rem;
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-sfZp0MOolI ul {
   list-style: none;
